network-policies/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-dp
  namespace: nptest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
          - containerPort: 80
